--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,8 @@ stages:
 
 jobs:
   include:
-#    - stage: prepare for tests
-#      script: robo job:check-coding-standards
+    - stage: prepare for tests
+      script: robo job:check-coding-standards
     - stage: prepare for tests
       script: robo job:check-module-circular-dependency
       after_success:
@@ -47,8 +47,6 @@ jobs:
     - stage: test
       script:
         - robo job:extract-from-aws
-        - ls -la
-        - ls -la web
         - robo job:run-kernel-tests "widgets-1,widgets-2,widgets-3,widgets-4,widgets-5"
 #    - script: robo job:run-kernel-tests "publications-1,publications-2,wysiwyg,vsite,os,os-theme-preview"
 #    - script: robo job:run-kernel-tests "cp-1,cp-2,other-1,other-2,cp-menu,profiles,redirect,cp-appearance,os-search"
