--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,8 @@ stages:
 
 jobs:
   include:
-    - stage: prepare for tests
-      script: robo job:check-coding-standards
+#    - stage: prepare for tests
+#      script: robo job:check-coding-standards
     - stage: prepare for tests
       script: robo job:check-module-circular-dependency
       after_success:
