--- a/.travis.yml
+++ b/.travis.yml
@@ -36,12 +36,12 @@ jobs:
   include:
     - stage: prepare for tests
       script: robo job:check-coding-standards
+#    - stage: prepare for tests
+#      script: robo job:run-unit-tests
     - stage: prepare for tests
       script: robo job:check-module-circular-dependency
       after_success:
         - robo job:upload-to-aws
-#    - stage: test
-#      script: robo job:run-unit-tests
 #    - stage: test
 #      script: robo job:run-kernel-tests "widgets-1,widgets-2,widgets-3,widgets-4,widgets-5"
 #    - stage: test
