Issue #12931 - Users can create department/project vsites (#13090)

--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -13,7 +13,9 @@ permissions:
   - 'access contextual links'
   - 'access printer-friendly version'
   - 'access toolbar'
+  - 'create department group'
   - 'create personal group'
+  - 'create project group'
   - 'delete bibcite_reference artwork revisions'
   - 'delete bibcite_reference audiovisual revisions'
   - 'delete bibcite_reference bill revisions'
