Revert to normal install way

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,10 +38,10 @@ jobs:
       script: robo job:check-coding-standards
 #    - stage: prepare for tests
 #      script: robo job:run-unit-tests
-    - stage: prepare for tests
-      script: robo job:check-module-circular-dependency
-      after_success:
-        - robo job:upload-to-aws
+#    - stage: prepare for tests
+#      script: robo job:check-module-circular-dependency
+#      after_success:
+#        - robo job:upload-to-aws
 #    - stage: test
 #      script: robo job:run-kernel-tests "widgets-1,widgets-2,widgets-3,widgets-4,widgets-5"
 #    - stage: test
