Issue #12921 - Fix - No authors in publications after import (#13089)
* Issue #12921 - Update bibcite to latest dev to fix Authors not appearing issue and support for coded year import.

* Issue #12921 - Test failures due to AccessHelper fix.

* Issue #12921 - Test fixes.

--- a/composer.json
+++ b/composer.json
@@ -411,8 +411,7 @@
                 "Update is.gd service api url": "https://www.drupal.org/files/issues/2019-07-03/update-isgd-api-3065567-2.patch"
             },
             "drupal/bibcite": {
-                "Extending the supported bibcite formats.": "patches/bibcite_formats_extension.patch",
-                "Editors and others roles treated as author": "https://www.drupal.org/files/issues/2019-08-01/other-roles-shown-as-authors-3006180-6.patch"
+                "Extending the supported bibcite formats.": "patches/bibcite_formats_extension.patch"
             },
             "drupal/config_ignore": {
                 "Override drush cim/cex for filtering": "https://www.drupal.org/files/issues/2019-01-08/2973431-supplementary-drush-commands-17.patch",
