--- a/.travis.yml
+++ b/.travis.yml
@@ -50,14 +50,14 @@ jobs:
       script: robo job:run-kernel-tests "cp-1,cp-2,other-1,other-2,cp-menu,profiles,redirect,cp-appearance,os-search"
     - stage: test
       script: robo job:run-functional-tests "classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,cp-menu,vsite_favicon"
-    - stage: test
-      script: robo job:run-functional-tests "os-search,analytics,publications,cp-appearance,redirect,twitter,os,vsite,cp-import"
-    - stage: test
-      script: robo job:run-functional-javascript-tests "publications,mailchimp,metatag,redirect,cp-appearance,vsite-preset"
-    - stage: test
-      script: robo job:run-functional-javascript-tests "os-search,cp,profiles,classes,pages"
-    - stage: test
-      script: robo job:run-functional-javascript-tests "events,vsite,widgets"
+#    - stage: test
+#      script: robo job:run-functional-tests "os-search,analytics,publications,cp-appearance,redirect,twitter,os,vsite,cp-import"
+#    - stage: test
+#      script: robo job:run-functional-javascript-tests "publications,mailchimp,metatag,redirect,cp-appearance,vsite-preset"
+#    - stage: test
+#      script: robo job:run-functional-javascript-tests "os-search,cp,profiles,classes,pages"
+#    - stage: test
+#      script: robo job:run-functional-javascript-tests "events,vsite,widgets"
     - stage: test
       script: robo job:run-functional-javascript-tests "os,os-theme-preview,blog,faq,news,presentations,cp-menu"
     - stage: codecov
