Issue #12991 - Don't clear all css/js when custom theme is updated (#13024)
* Issue #12991 - advagg module and default settings

* Issue #12991 - add support incase admin want to tweak the performance

* Revert "Issue #12991 - add support incase admin want to tweak the performance"

This reverts commit a9db01de5066d2cf83dfbad31aa6861642ec6d09.

* Revert "Issue #12991 - advagg module and default settings"

This reverts commit 38ee04a4d2a6d619a745adb88e9ec2df173fe03d.

* Issue #12991 - enable css/js aggregation

* Issue #12991 - Fix - Custom theme styles not updated for user

* Issue #12991 - override the core's css renderer

* Issue #12991 - decided to use service decorator

Read the Symfony and Drupal doc for overriding existing services, and
figured that service decorator will fit here well.
We don't want to override the core's service completely, it is still
available, and at the same we are providing an extended version of that
service.

* Issue #12991 - Alter custom theme specific query string

* Issue #12991 - better documentation

* Issue #12991 - handle custom theme script cache separately

* Issue #12991 - tests for verifying browser cache is working as expected

* Issue #12991 - Code refactoring

Remove unnecessary method.

* Issue #12991 - flush vsite specific css/js cache

* Issue #12991 - Fix - Style not updated for anonymous user

* Issue #12991 - CssCollectionRenderer test

* Issue #12991 - JsCollectionRenderer test

* Issue #12991 - vsiteFlushCssJs test

* Issue #12991 - More assertions in functional test

* Issue #12991 - add more coverage metadata

* Issue #12991 - update PreviewActionOsThemePreviewTest::testSave

* Issue #12991 - Probably the cleanup is not needed anymore

* Revert "Issue #12991 - Probably the cleanup is not needed anymore"

This reverts commit 6b8ad09ae3aeda1569823994a0b5c21a0f86d5b5.

* Issue #12991 - Update AppearanceSettingsTest::testSave

* Issue #12991 - update App

--- a/config/sync/config_split.config_split.local.yml
+++ b/config/sync/config_split.config_split.local.yml
@@ -19,6 +19,7 @@ graylist:
   - os_media.settings
   - os_publications.settings
   - search_api.server.os_search
+  - system.performance
 graylist_dependents: true
 graylist_skip_equal: true
 weight: 0
