--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: php
-dist: trusty
+dist: xenial
 
 cache:
   directories:
-    - $HOME/.composer/cache/files
+    - $HOME/.composer/cache
 
 addons:
   artifacts:
@@ -23,26 +23,41 @@ env:
     - DRUPAL_BASE_URL="http://127.0.0.1:8080"
     - PATH="$PATH:$HOME/.composer/vendor/bin"
     - TRAVIS_NODE_VERSION="4"
+    - AWS_ACCESS_KEY_ID=$ARTIFACTS_KEY
+    - AWS_SECRET_ACCESS_KEY=$ARTIFACTS_SECRET
 
 stages:
+  - prepare for tests
   - test
   - name: codecov
     if: branch = 8.x-1.x-dev
 
 jobs:
   include:
-    - script: robo job:check-coding-standards
-    - script: robo job:run-unit-tests
-    - script: robo job:check-module-circular-dependency
-    - script: robo job:run-kernel-tests "widgets-1,widgets-2,widgets-3,widgets-4,widgets-5"
-    - script: robo job:run-kernel-tests "publications-1,publications-2,wysiwyg,vsite,os,os-theme-preview"
-    - script: robo job:run-kernel-tests "cp-1,cp-2,other-1,other-2,cp-menu,profiles,redirect,cp-appearance,os-search"
-    - script: robo job:run-functional-tests "classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,cp-menu,vsite_favicon"
-    - script: robo job:run-functional-tests "os-search,analytics,publications,cp-appearance,redirect,twitter,os,vsite,cp-import"
-    - script: robo job:run-functional-javascript-tests "publications,mailchimp,metatag,redirect,cp-appearance,vsite-preset"
-    - script: robo job:run-functional-javascript-tests "os-search,cp,profiles,classes,pages"
-    - script: robo job:run-functional-javascript-tests "events,vsite,widgets"
-    - script: robo job:run-functional-javascript-tests "os,os-theme-preview,blog,faq,news,presentations,cp-menu"
+    - stage: prepare for tests
+      script: robo job:check-coding-standards
+    - stage: prepare for tests
+      script: robo job:run-unit-tests
+    - stage: prepare for tests
+      script: robo job:check-module-circular-dependency
+    - stage: test
+      script: robo job:run-kernel-tests "widgets-1,widgets-2,widgets-3,widgets-4,widgets-5"
+    - stage: test
+      script: robo job:run-kernel-tests "publications-1,publications-2,wysiwyg,vsite,os,os-theme-preview"
+    - stage: test
+      script: robo job:run-kernel-tests "cp-1,cp-2,other-1,other-2,cp-menu,profiles,redirect,cp-appearance,os-search"
+    - stage: test
+      script: robo job:run-functional-tests "classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,cp-menu,vsite_favicon"
+    - stage: test
+      script: robo job:run-functional-tests "os-search,analytics,publications,cp-appearance,redirect,twitter,os,vsite,cp-import"
+    - stage: test
+      script: robo job:run-functional-javascript-tests "publications,mailchimp,metatag,redirect,cp-appearance,vsite-preset"
+    - stage: test
+      script: robo job:run-functional-javascript-tests "os-search,cp,profiles,classes,pages"
+    - stage: test
+      script: robo job:run-functional-javascript-tests "events,vsite,widgets"
+    - stage: test
+      script: robo job:run-functional-javascript-tests "os,os-theme-preview,blog,faq,news,presentations,cp-menu"
     - stage: codecov
       script: robo job:run-unit-tests-code-coverage
       after_success: bash <(curl -s https://codecov.io/bash)
@@ -97,6 +112,9 @@ jobs:
 
 before_install:
   - echo 'sendmail_path = /bin/true' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
+  - pyenv global 3.7.1
+  - pip install -U pip
+  - pip install awscli
 
 install:
   - composer global require consolidation/robo:2.0.0
@@ -105,4 +123,6 @@ before_script:
   - cp .travis/RoboFile.php .
 
 after_failure:
+  - docker-compose logs php
+  - docker-compose logs mariadb
   - artifacts upload
