Issue #12950 - Fix - Vsite owner doesn't have access to cp item (#13091)
* Issue #12950 - Added personal admin role to use who creates the group.

* Issue #12950 - Removed static permission and added dynamic group type.

* Issue #12950 - Added the test for admin links.

* Issue #12950 - Removed overwriting of role and insteadd append the admin role to the owner.

* Issue #12950 - Added assigning role logic to helper and created kernel test for that.

* Issue #12950 - Refactored the code.

* Issue #12950 - Resolved PR comments.

* Issue #12950 - Changed invalid comment.

* Issue #12950 - Changed comment.

* Issue #12950 - Changed comment.

* Issue #12950 - Removed helper from the test.

* Issue #12950 - Chaged Assert True to Assert Contains, considering multiple roles.

* Issue #12950 - Converted 2 dimensional array into single dimensional array.

* Issue #12950 - Add group admin role removed when admin is creating the group.

* Issue #12950 - Added helper in the test.

--- a/profile/modules/vsite/vsite.services.yml
+++ b/profile/modules/vsite/vsite.services.yml
@@ -66,3 +66,6 @@ services:
   vsite.validate_helper:
     class: Drupal\vsite\Helper\VsiteFieldValidateHelper
     arguments: ['@vsite.context_manager', '@entity_type.manager']
+
+  vsite.role_helper:
+    class: \Drupal\vsite\Helper\VsiteRoleHelper
