Issue #12844 - Import News (#13065)
* Issue #12844 - Added Import template and migrate yaml for news

* Issue #12844 - Added Import News migration and validation logic

* Issue #12844 - Test cases for Import News

* Issue #12844 - Code cleanup

* Issue #12844 - CSV encoding issue

* Issue #12844 - Travis test fix

* Issue #12844 - PR Review Correction

Co-authored-by: Richard Brandon <rbran100@users.noreply.github.com>

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -101,6 +101,7 @@ module:
   metatag_twitter_cards: 0
   metatag_views: 0
   migrate: 0
+  migrate_file: 0
   migrate_plus: 0
   migrate_source_csv: 0
   migrate_tools: 0
