Issue #12947 - CI refactorings (#13109)
* Issue #12947 - Remove listing commands

* Issue #12947 - Add extra comments

* Issue #12947 - Move unit test into test stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,9 @@ jobs:
     - stage: prepare for tests
       script: robo job:check-coding-standards
     - stage: prepare for tests
-      script: robo job:run-unit-tests
-    - stage: prepare for tests
       script: robo job:check-module-circular-dependency
+    - stage: test
+      script: robo job:run-unit-tests
     - stage: test
       script: robo job:run-kernel-tests "widgets-1,widgets-2,widgets-3,widgets-4,widgets-5"
     - stage: test
