--- a/config/sync/core.entity_view_display.block_content.section_navigation.default.yml
+++ b/config/sync/core.entity_view_display.block_content.section_navigation.default.yml
@@ -4,11 +4,20 @@ status: true
 dependencies:
   config:
     - block_content.type.section_navigation
+    - field.field.block_content.section_navigation.field_widget_title
 id: block_content.section_navigation.default
 targetEntityType: block_content
 bundle: section_navigation
 mode: default
-content: {  }
+content:
+  field_widget_title:
+    weight: 0
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
 hidden:
   langcode: true
   search_api_excerpt: true
