--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_attached_media
+    - field.field.node.page.field_is_hidden_section_nav
     - field.field.node.page.field_meta_tags
     - field.field.node.page.field_taxonomy_terms
     - image.style.gallery
@@ -135,5 +136,6 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_is_hidden_section_nav: true
   langcode: true
   search_api_excerpt: true
