--- a/config/sync/core.entity_view_display.node.page.block.yml
+++ b/config/sync/core.entity_view_display.node.page.block.yml
@@ -36,6 +36,7 @@ content:
     third_party_settings: {  }
 hidden:
   field_attached_media: true
+  field_is_hidden_section_nav: true
   field_meta_tags: true
   field_taxonomy_terms: true
   langcode: true
