--- a/config/sync/core.entity_view_display.node.page.slide_teaser.yml
+++ b/config/sync/core.entity_view_display.node.page.slide_teaser.yml
@@ -133,6 +133,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_is_hidden_section_nav: true
   field_meta_tags: true
   langcode: true
   search_api_excerpt: true
