--- a/config/sync/core.entity_view_display.node.page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.page.teaser.yml
@@ -43,6 +43,7 @@ content:
     third_party_settings: {  }
 hidden:
   field_attached_media: true
+  field_is_hidden_section_nav: true
   field_meta_tags: true
   langcode: true
   search_api_excerpt: true
