Issue #11403 - Added vsite url token

--- a/profile/modules/vsite/vsite.services.yml
+++ b/profile/modules/vsite/vsite.services.yml
@@ -69,3 +69,7 @@ services:
 
   vsite.role_helper:
     class: \Drupal\vsite\Helper\VsiteRoleHelper
+
+  vsite.token_helper:
+    class: \Drupal\vsite\Helper\VsiteTokenHelper
+    arguments: ['@token']
