--- a/profile/modules/cp/modules/cp_import/cp_import.services.yml
+++ b/profile/modules/cp/modules/cp_import/cp_import.services.yml
@@ -15,4 +15,4 @@ services:
     arguments: ['@cp_import.helper', '@vsite.alias_storage', '@language_manager']
   cp_import_access.check:
     class: '\Drupal\cp_import\Access\CpImportAccessCheck'
-    arguments: ['@os_app_access.app_access']
+    arguments: ['@os_app_access.app_access', '@vsite.app.manager', '@entity_type.manager']
